--- a/core/templates/core/lane_create.html
+++ b/core/templates/core/lane_create.html
@@ -1,9 +1,8 @@
 {% extends "base_view.html" %}
+
 {% load staticfiles %}
 
-{% block title %}
-Create Lane
-{% endblock %}
+{% block title %}Create Lane{% endblock %}
 
 {% block body %}
 <div class="container graybg">
@@ -13,34 +12,44 @@ Create Lane
             <legend>Lane Information</legend>
             <table class="table-condensed">
                 <thead>
-                {% for field in form %}
-                <tr>
-                    <th>
-                    {{field.label_tag}}
-                    </th>
-                    <td>
-                    {{ field.errors }}
-                    {% if field.name == "sequencing" and sequencing_id %}
-                        <select id="id_sequencing" name="sequencing">
-                            <option value="{{sequencing_id}}" selected="selected">{{sequencing}}</option>
-                    {% else %}
-                        {{ field }}
-                    {% endif %}
-                    {% if field.help_text %}
-                        <p class="helptext">{{ field.help_text|safe }}</p>
-                    {% endif %}
-                    </td>
-                </tr>
-                {% endfor %}
-                </thead>
-            </table>
+
+                    {% for field in form %}
+                        <tr>
+                            <th>
+                                {{ field.label_tag }}
+                            </th>
+                            <td>
+                                {{ field.errors }}
+
+                                {% if field.name == "sequencing" and sequencing_id %}
+                                    <select id="id_sequencing" name="sequencing">
+                                        <option value="{{ sequencing_id }}" selected="selected">{{ sequencing }}</option>
+                                {% else %}
+                                    {{ field }}
+                                {% endif %}
+
+                                {% if field.help_text %}
+                                    <p class="helptext">{{ field.help_text|safe }}</p>
+                                {% endif %}
+                            </td>
+                        </tr>
+                    {% endfor %}
+
+                    </thead>
+                </table>
         </fieldset><br>
+
         <input class="btn btn-primary btn-sm" type="submit" name="create" value="Create">
+
         {% if sequencing_id %}
-        <a class="btn btn-default btn-sm" href="{% url library_type|add:':sequencing_detail' pk=sequencing_id %}">Cancel</a>
+            <a class="btn btn-default btn-sm" href="{% url library_type|add:':sequencing_detail' pk=sequencing_id %}">Cancel</a>
         {% else %}
-        <a class="btn btn-default btn-sm" href="{% url library_type|add:':sequencing_list'%}">Cancel</a>
+            <a class="btn btn-default btn-sm" href="{% url library_type|add:':sequencing_list'%}">Cancel</a>
         {% endif %}
-    </form><br>
+
+    </form>
+
+    <br>
+
 </div>
 {% endblock %}
