--- a/core/templates/core/lane_delete.html
+++ b/core/templates/core/lane_delete.html
@@ -1,17 +1,21 @@
 {% extends "base_view.html" %}
+
 {% load staticfiles %}
 
-{% block title %}
-Delete lane
-{% endblock %}
+{% block title %}Delete Lane{% endblock %}
 
 {% block body %}
 <div class="container graybg">
-    <h5>Are you sure you want to delete lane <b>{{lane.flow_cell_id}}</b>?</h5><br>
+    <h5>Are you sure you want to delete lane <b>{{ lane.flow_cell_id }}</b>?</h5>
+
+    <br>
+
     <form action="{% url library_type|add:':lane_delete' pk=pk %}" method="POST">
         {% csrf_token %}
         <input class="btn btn-danger btn-sm" type="submit" name="delete" value="Yes, I'm sure">
         <a class="btn btn-default btn-sm" href="{% url library_type|add:':sequencing_detail' pk=sequencing_id %}">Cancel</a>
-    </form><br>
+    </form>
+
+    <br>
 </div>
 {% endblock %}
