--- a/core/templates/core/project_update.html
+++ b/core/templates/core/project_update.html
@@ -1,19 +1,23 @@
 {% extends "base_view.html" %}
+
 {% load staticfiles %}
 
-{% block title %}
-Edit Project
-{% endblock %}
+{% block title %}Edit Project{% endblock %}
 
 {% block body %}
 <div class="container graybg">
     <form action="{% url 'core:project_update' pk=pk %}" method="POST">
         {% csrf_token %}
         <table class="table-condensed">
-        {{form}}
-        </table><br>
+            {{ form }}
+        </table>
+
+        <br>
+
         <input class="btn btn-primary btn-sm" type="submit" name="update" value="Update">
         <a class="btn btn-default btn-sm" href="{% url 'core:project_list' %}">Cancel</a>
-    </form><br>
+    </form>
+
+    <br>
 </div>
 {% endblock %}
