--- a/core/templates/core/sample_list.html
+++ b/core/templates/core/sample_list.html
@@ -1,16 +1,15 @@
 {% extends "base_view.html" %}
+
 {% load staticfiles %}
 
-{% block title %}
-List of Samples
-{% endblock %}
+{% block title %}List of Samples{% endblock %}
 
 {% block body %}
-<div class="container" style="padding:0; margin-bottom:5px;">
-    <h4 style="float:left;">Select a sample to view its details</h4>
-    <a class="btn btn-primary btn-sm" style="float:right; margin-top:5px;" href="{% url 'core:sample_create' %}">Add Sample</a>
+<div class="container" style="padding: 0; margin-bottom: 5px;">
+    <h4 style="float: left;">Select a sample to view its details</h4>
+    <a class="btn btn-primary btn-sm" style="float: right; margin-top: 5px;" href="{% url 'core:sample_create' %}">Add Sample</a>
 </div>
-<div class="container" style="background-color:#F5F5F5;">
+<div class="container" style="background-color: #F5F5F5;">
     <div class="table-responsive">
         <table id="datatable" class="table table-striped">
             <thead>
@@ -26,19 +25,20 @@ List of Samples
             </thead>
             <tbody>
                 <br/>
+
                 {% for sample in samples %}
-                <tr>
-                    <td><a href="{% url 'core:sample_detail' pk=sample.pk %}">{{sample.sample_id}}</a></td>
-                    <td>{{sample.get_sample_type_display}}</td>
-                    <td>{{sample.xenograft_id}}</td>
-                    <td>{{sample.cell_line_id}}</td>
-                    <td>{{sample.anonymous_patient_id}}</td>
-                    <td>{{sample.notes}}</td>
-                    <td>
-                        <p style="float:right;"><a style="margin-right:2px;" href="{% url 'core:sample_update' pk=sample.pk %}"><i class="fa fa-pencil" aria-hidden="true" style="color:orange;"></i> edit</a>
-                        <a href="{% url 'core:sample_delete' pk=sample.pk %}"><i class="icon-remove-sign" style="color:red"></i> delete</a></p>
-                    </td>
-                </tr>
+                    <tr>
+                        <td><a href="{% url 'core:sample_detail' pk=sample.pk %}">{{ sample.sample_id }}</a></td>
+                        <td>{{ sample.get_sample_type_display }}</td>
+                        <td>{{ sample.xenograft_id }}</td>
+                        <td>{{ sample.cell_line_id }}</td>
+                        <td>{{ sample.anonymous_patient_id }}</td>
+                        <td>{{ sample.notes }}</td>
+                        <td>
+                            <p style="float: right;"><a style="margin-right: 2px;" href="{% url 'core:sample_update' pk=sample.pk %}"><i class="fa fa-pencil" aria-hidden="true" style="color: orange;"></i> edit</a>
+                            <a href="{% url 'core:sample_delete' pk=sample.pk %}"><i class="icon-remove-sign" style="color: red"></i> delete</a></p>
+                        </td>
+                    </tr>
                 {% endfor %}
             </tbody>
         </table>
